--- a/src/Game.css
+++ b/src/Game.css
@@ -61,7 +61,8 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 30px;
-  width: 25%;
+  max-width: 400px;
+  line-height: 100%;
 }
 
 #welcome-btn {
@@ -75,4 +76,10 @@ body {
   left: 50%;
   transform: translate(-50%, 0);
   font-size: 30px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  line-height: 150%;
 }
